--- a/index.html
+++ b/index.html
@@ -5,32 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
+  <div class="container">
 
-  Preview
+    <article>
+      <picture>
+        <source media="(min-width: 640px)" srcset="./images/image-product-desktop.jpg">
+        <img src="./images/image-product-mobile.jpg" alt="" >
+      </picture>
+    </article>
 
-  Gabrielle Essence Eau De Parfum
+    <article>
+      <h2>Preview</h2>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+      <h1>
+        Gabrielle Essence Eau De Parfum
+      </h1>
 
-  $149.99
-  $169.99
+      <p>
+        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
+      </p>
 
-  Add to Cart
+      <ul>
+        <li class="price">$149.99</li>
+        <li><s>$169.99</s></li>
+      </ul>
+
+      <button class="btn"><img src="./images/icon-cart.svg" alt="">Add to Cart</button>
+
+    </article>
+
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="http://naveen-770.netlify.app">Naveen Sreevalsan</a>.
   </div>
 </body>
 </html>
