--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </article>
 
     <article>
-      <h2>Preview</h2>
+      <h2>Perfume</h2>
 
       <h1>
         Gabrielle Essence Eau De Parfum
